# UndoFatigue

./: .gitignore  .gitmodules  CMakeLists.txt  Nearest_Path_Finder.cpp  README.md  UF_Graph_COde  package-lock.json  uf_edges (2).csv  uf_nodes (4).csv
UndoFatigue/: package-lock.json  package.json
UndoFatigue/src/: App.css  App.jsx  api.js  index.css  mockdata.js
UndoFatigue/src/components/: NavigationScreen.jsx  RouteSelectionScreen.jsx  SearchScreen.jsx
backend/: Nearest_Path_Finder.cpp  UF_Graph_COde  uf_nodes.csv  uf_places.csv
